src/styles/navigation.scss
.nav {
  background: white;
  position: fixed;
  width: 100%;
  top: 0;
  left: 0;
  z-index: 3;
  transition: all 0.5s ease;

  &.scroll {
    background-color: $grey;

    .nav-container {
      a {
        color: white;
      }
    }
  }

  .nav-container {
    padding: 0 1.5rem;
    height: $nav-height-mobile;
    max-width: $width;
    justify-content: space-between;
    align-items: center;
    display: flex;
    margin: auto;
    transition: height 0.5s ease;
  }
  .home {
    a {
      display: flex;
      align-items: center;
      margin-right: 0;
      font-weight: 500;

      &:hover,
      &:focus {
        color: $light-grey;
      }
    }

    .text {
      display: none;
    }
  }

  .links {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    flex: 1;
    margin: 0;

    a {
      display: flex;
      text-align: center;
      align-items: center;
      padding: 1rem 1rem 0 1rem;
      margin: 0;
      font-weight: 400;

      &:hover,
      &:focus {
        color: $light-grey;
      }
    }
  }

  .homeicon {
    height: 26px;
    width: 26px;
    margin-bottom: 0;
  }
}

@include mobile {
  .nav {
    &.scroll {
      .nav-container {
        height: $nav-height-desktop-scroll;
      }
    }

    .nav-container {
      height: $nav-height-desktop;
      padding: 0 1.5rem;

      a {
        position: relative;
        margin-bottom: 0px;
        padding-bottom: 5px;
        color: inherit;
        cursor: pointer;
        text-decoration: none;
        transition: all 0.4s ease 0s;
      }
  
      a::after {
        content: "";
        position: absolute;
        right: 0px;
        width: 0px;
        bottom: -5px;
        height: 3px;
        transition-property: width;
        transition-duration: 0.3s;
        transition-timing-function: ease-out;
        background: $light-grey;
      }
  
      a:hover:after {
        left: 0;
        right: auto;
        width: 100%;
      }
    }

    .home {
      .text {
        display: block;
      }
    }

    .links {
      justify-content: space-between;
      flex: unset;
      flex-direction: row;
      align-content: center;
      a {
        margin: 0 0.5rem;
        padding: 0rem 0.5rem;
      }
    }

    .homeicon {
      margin-right: 1rem;
    }
  }
}

